# Outliner

./: .gitignore  AUTHORS.md  README.md  app  com.github.phase1geo.outliner.elementary.yml  com.github.phase1geo.outliner.flathub.yml  com.github.phase1geo.outliner.json  com.github.phase1geo.outliner.yml  meson.build
.github/workflows/: ci.yml
data/: com.github.phase1geo.outliner.appdata.xml  com.github.phase1geo.outliner.appdata.xml.in  com.github.phase1geo.outliner.desktop  com.github.phase1geo.outliner.gresource.xml  com.github.phase1geo.outliner.gschema.xml  com.github.phase1geo.outliner.shortcuts.ui  com.github.phase1geo.outliner.xml  io.github.phase1geo.outliner.appdata.xml  io.github.phase1geo.outliner.appdata.xml.in  io.github.phase1geo.outliner.desktop  io.github.phase1geo.outliner.desktop.in  io.github.phase1geo.outliner.gresource.xml  io.github.phase1geo.outliner.gschema.xml  io.github.phase1geo.outliner.shortcuts.ui  io.github.phase1geo.outliner.xml  meson.build
data/css/: style.css
debian/: changelog  control  copyright  rules
elementary/: io.github.phase1geo.outliner.yml
flathub/: io.github.phase1geo.outliner.yml
meson/: post_install.py
po/: POTFILES  com.github.phase1geo.outliner.pot  fr.po  io.github.phase1geo.outliner.pot  meson.build  nl.po  ru.po
po/extra/: POTFILES  extra.pot  fr.po  nl.po
src/: About.vala  Application.vala  BaseMenu.vala  CanvasText.vala  Clipboard.vala  ColorPicker.vala  Completion.vala  Document.vala  Export.vala  ExportUtils.vala  Exporter.vala  Exports.vala  FocusStack.vala  FormatBar.vala  FormattedText.vala  FormattedText2.vala  InfoBox.vala  KeyCommands.vala  LinkEditor.vala  MainWindow.vala  ModeGroup.vala  Node.vala  NodeLabels.vala  NodeMenu.vala  OutlineTable.vala  OutlineTable2.vala  Preferences.vala  SearchBar.vala  SettingsUpdater.vala  Shortcuts.vala  Tagger.vala  TextCompletion.vala  TextParser.vala  Theme.vala  Themes.vala  UndoBuffer.vala  UndoItem.vala  UndoTextBuffer.vala  UndoTextItem.vala  Utils.vala  (+2 more)
src/exports/: ExportCSV.vala  ExportHTML.vala  ExportMarkdown.vala  ExportMinder.vala  ExportODT.vala  ExportOPML.vala  ExportOrgMode.vala  ExportPDF.vala  ExportPrint.vala  ExportRTF.vala  ExportText.vala  meson.build
src/parsers/: MarkdownParser.vala  TaggerParser.vala  UnicodeParser.vala  UrlParser.vala  meson.build
src/themes/: ThemeDark.vala  ThemeDefault.vala  ThemeMaterial.vala  ThemeMild.vala  ThemePrintColor.vala  ThemePrintGrayscale.vala  ThemeSolarizedDark.vala  ThemeSolarizedLight.vala  meson.build
src/undo_actions/: UndoNodeAddParent.vala  UndoNodeCut.vala  UndoNodeDelete.vala  UndoNodeExpander.vala  UndoNodeIndent.vala  UndoNodeInsert.vala  UndoNodeJoin.vala  UndoNodeMove.vala  UndoNodeName.vala  UndoNodeNote.vala  UndoNodePaste.vala  UndoNodeReplace.vala  UndoNodeSplit.vala  UndoNodeUnclone.vala  UndoNodeUnindent.vala  UndoReplaceAll.vala  UndoTextBackspace.vala  UndoTextClearTags.vala  UndoTextDelete.vala  UndoTextInsert.vala  UndoTextMultiInsert.vala  UndoTextReplace.vala  UndoTextTagAdd.vala  UndoTextTagRemove.vala  UndoTextTagReplace.vala  UndoTitleChange.vala  meson.build
tests/: assert.vala  test.vala
