sources += files(
  'exports/ExportHTML.vala',
  'exports/ExportMarkdown.vala',
  'exports/ExportMinder.vala',
  'exports/ExportOPML.vala',
  'exports/ExportPDF.vala',
  'exports/ExportPrint.vala',
  'exports/ExportRTF.vala',
  'exports/ExportText.vala',

  'themes/ThemeDark.vala',
  'themes/ThemeDefault.vala',
  'themes/ThemePrintColor.vala',
  'themes/ThemePrintGrayscale.vala',
  'themes/ThemeSolarizedDark.vala',
  'themes/ThemeSolarizedLight.vala',

  'undo_actions/UndoNodeCut.vala',
  'undo_actions/UndoNodeDelete.vala',
  'undo_actions/UndoNodeExpander.vala',
  'undo_actions/UndoNodeIndent.vala',
  'undo_actions/UndoNodeInsert.vala',
  'undo_actions/UndoNodeMove.vala',
  'undo_actions/UndoNodeName.vala',
  'undo_actions/UndoNodeNote.vala',
  'undo_actions/UndoNodePaste.vala',
  'undo_actions/UndoNodeSplit.vala',
  'undo_actions/UndoNodeUnclone.vala',
  'undo_actions/UndoNodeUnindent.vala',
  'undo_actions/UndoReplaceAll.vala',
  'undo_actions/UndoTextDelete.vala',
  'undo_actions/UndoTextInsert.vala',
  'undo_actions/UndoTextReplace.vala',
  'undo_actions/UndoTextTagAdd.vala',
  'undo_actions/UndoTextTagRemove.vala',

  'Application.vala',
  'CanvasText.vala',
  'Document.vala',
  'DynamicNotebook.vala',
  'FormatBar.vala',
  'FormattedText.vala',
  'LinkEditor.vala',
  'MainWindow.vala',
  'Node.vala',
  'NodeLabels.vala',
  'NodeMenu.vala',
  'OutlineTable.vala',
  'SearchBar.vala',
  'Theme.vala',
  'Themes.vala',
  'UndoBuffer.vala',
  'UndoItem.vala',
  'UndoTextBuffer.vala',
  'UndoTextItem.vala',
  'Utils.vala'
)
