sources += files(
  'About.vala',
  'Application.vala',
  'BaseMenu.vala',
  'CanvasText.vala',
  'Clipboard.vala',
  'ColorPicker.vala',
  'Document.vala',
  'Export.vala',
  'Exports.vala',
  'Exporter.vala',
  'ExportUtils.vala',
  'FormatBar.vala',
  'FormattedText.vala',
  'KeyCommands.vala',
  'LinkEditor.vala',
  'MainWindow.vala',
  'ModeGroup.vala',
  'Node.vala',
  'NodeLabels.vala',
  'NodeMenu.vala',
  'OutlineTable.vala',
  'Preferences.vala',
  'SearchBar.vala',
  'Shortcuts.vala',
  'Tagger.vala',
  'TextCompletion.vala',
  'TextParser.vala',
  'Theme.vala',
  'Themes.vala',
  'UndoBuffer.vala',
  'UndoItem.vala',
  'UndoTextBuffer.vala',
  'UndoTextItem.vala',
  'UnicodeInsert.vala',
  'Utils.vala',
  'ZoomWidget.vala'
)

subdir('exports')
subdir('parsers')
subdir('themes')
subdir('undo_actions')
