sources += files(
  'UndoNodeAddParent.vala',
  'UndoNodeCut.vala',
  'UndoNodeDelete.vala',
  'UndoNodeExpander.vala',
  'UndoNodeIndent.vala',
  'UndoNodeInsert.vala',
  'UndoNodeJoin.vala',
  'UndoNodeMove.vala',
  'UndoNodeName.vala',
  'UndoNodeNote.vala',
  'UndoNodePaste.vala',
  'UndoNodeReplace.vala',
  'UndoNodeSplit.vala',
  'UndoNodeUnclone.vala',
  'UndoNodeUnindent.vala',
  'UndoReplaceAll.vala',
  'UndoTextBackspace.vala',
  'UndoTextClearTags.vala',
  'UndoTextDelete.vala',
  'UndoTextInsert.vala',
  'UndoTextMultiInsert.vala',
  'UndoTextReplace.vala',
  'UndoTextTagAdd.vala',
  'UndoTextTagRemove.vala',
  'UndoTitleChange.vala',
)
